test-calico/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-calico
  labels:
    app.kubernetes.io/name: test-calico
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: test-calico
