test-calico/templates/networkpolicy.yaml
# https://docs.projectcalico.org/security/tutorials/kubernetes-policy-basic
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
spec:
  podSelector:
    matchLabels: {}

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      test-calico-access: protected
  ingress:
    - from:
        - podSelector:
            matchLabels:
              test-calico-access: allowed
